[package]
name = "RustNetworkScanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0", features = ["json"] }
anyhow = "1.0.98"
ipnetwork = "0.20"
indicatif = "0.18.0"
flate2 = "1.0"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }